# miniRT

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TODO.txt  cmake_install.cmake  devcontainer.json  miniRT  thread_test.c
.devcontainer/: devcontainer.json
include/: ONB.h  hooks.h  lens.h  random.h  render_context.h  render_plane.h  scenes.h
include/camera/: defocus_blur.h
include/core/: color.h  hit_record.h  lens.h  ray.h
include/geometry/: aabb.h  bvh.h
include/geometry/objects/: box.h  hittable.h  hittable_list.h  hittable_shared.h  instance.h  moving_sphere.h  quad.h  sphere.h
include/math/: ONB.h  matrix3.h  random.h  utils.h
include/pdfs/: pdf.h  pdf_cosine.h  pdf_hittable.h  pdf_mixtures.h  pdf_shared.h  pdf_sphere.h
include/render/: aabb.h  box.h  bvh.h  color.h  constant_medium.h  hit_record.h  hittable.h  hittable_list.h  hittable_shared.h  instance.h  material.h  material_dielectric.h  material_diffuse_light.h  material_isotropic.h  material_lambertian.h  material_metal.h  material_shared.h  matrix3.h  moving_sphere.h  quad.h  ray.h  render.h  render_plane.h  sphere.h  utils.h  utils.h.gch  vec3.h  vec3.h.gch
include/renderer/: mlx_setup.h  render_context.h  render_launch.h  render_plane.h
include/renderer/threads/: queue.h  thread.h  thread_pool.h
include/shading/materials/: material.h  material_diffuse_light.h  material_isotropic.h  material_shared.h
include/shading/pdfs/: pdf.h  pdf_cosine.h  pdf_hittable.h  pdf_mixtures.h  pdf_shared.h  pdf_sphere.h
include/shading/textures/: checker_pattern.h  constant_medium.h  perlin.h  solid_colour.h  texture.h  texture_shared.h
include/system/: hooks.h  scene_setup.h  scenes.h
include/textures/: checker_pattern.h  perlin.h  solid_colour.h  texture.h  texture_shared.h
lib/Libft/: CMakeCache.txt  Makefile  cmake_install.cmake
lib/Libft/include/: libft.h
lib/get_next_line/: Makefile  cmake_install.cmake
lib/vec3/include/: vec3.h
scenes/: bouncing_spheres.c  cornell_box_empty.c  cornell_fog.c  earth.c  final_scene.c  perlin_spheres.c  quads.c  simple_light.c  standard_cornell_box.c  touching_spheres.c  two_checkered_spheres.c
src/: double.c  image_save.c  main.c  pdf.c  random.c  render_context.c  scenes.c
src/core/: hit_record.c
src/geometry/: aabb.c  bvh.c
src/math/: matrix3.c  random.c
src/render/: aabb.c  box.c  bvh.c  color.c  constant_medium.c  diffuse_light.c  hit_record.c  hittable.c  hittable_list.c  instance.c  material.c  material_dielectric.c  material_diffuse_light.c  material_diffuse_light.h  material_isotropic.c  material_lambertian.c  material_metal.c  matrix3.c  moving_sphere.c  quad.c  sphere.c
src/renderer/: image_save.c  mlx_setup.c  render_context.c  render_launch.c
src/system/: scene_setup.c  scenes.c
src/textures/: perlin.c
src/threads/: queue.h  sync.h  sync_unix.c  thread.h  thread_pool.c  thread_pool.h  thread_unix.c
(+24 files in other folders)
